<resources>
    <string name="app_name">CaDaS</string>
    <string name="activity_main_bem_vindo">Bem Vindo ao</string>
    <string name="activity_main_nome_app">CaDaS</string>
    <string name="activity_main_titulo_descricao_app">Como ajudamos você?</string>
    <string name="activity_main_descricao_app">Com esse app você poderá salvar todos os seus cálculos,
        podendo atribui-los nomes e descrições que possibilitarão a fácil reutilização deles!</string>
    <string name="activity_main_botao_sair">Sair</string>
    <string name="activity_main_botao_proximo">Próximo</string>
    <string name="activity_menu_botao_cadastrar_calculo">Novo Cálculo</string>
    <string name="activity_menu_botao_consultar_calculo">Pesquisar por Cálculo</string>
    <string name="activity_menu_botao_listar_calculos">Lista de Cálculos</string>
    <string name="activity_menu_botao_sair">Sair</string>
    <string name="activity_cadastro_title">Novo Cálculo</string>
    <string name="activity_cadastro_title_campo_nome">Nome</string>
    <string name="activity_cadastro_title_campo_expressao">Cálculo ou Expressão</string>
    <string name="activity_cadastro_title_campo_data">Data</string>
    <string name="activity_cadastro_title_campo_descricao">Descrição (opcional)</string>
    <string name="activity_cadastro_botao_voltar">Voltar</string>
    <string name="activity_cadastro_botao_confirmar">Confirmar</string>
    <string name="activity_cadastro_dados_invalidos">Ops! Você não preencheu o nome e/ou a expressão e/ou a data.</string>
    <string name="activity_cadastro_calculo_cadastrado_sucesso">Novo cálculo cadastrado com sucesso!</string>
    <string name="activity_cadastro_calculo_mesmo_nome">Ops! Já existe um cálculo cadastrado com esse nome.</string>
    <string name="activity_pesquisa_cadastro_title">Pesquisar por Cálculo</string>
    <string name="activity_pesquisa_cadastro_title_campo_resultado">Resultado:</string>
    <string name="activity_pesquisa_cadastro_botao_pesquisar">Pesquisar</string>
    <string name="activity_pesquisa_cadastro_dados_invalidos">Ops! Você não preencheu o nome do cálculo.</string>
    <string name="activity_pesquisa_cadastro_sem_resultado">Nenhum cálculo encontrado.</string>
    <string name="activity_lista_calculos_title">Lista de Cálculos</string>
    <string name="activity_lista_title_campo_lista">Cálculos:</string>
    <string name="activity_lista_calculos_nao_tem_calculos">Não há cálculos.</string>
    <string name="erro_conexao_bd">Ops! Não foi possível se conectar com o banco de dados. O app será fechado.</string>
</resources>