<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grandient_background"
    tools:context=".CadastroCalculoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:padding="10dp"
            android:textColor="@color/colorFontTextViewTitle"
            android:textStyle="bold"
            android:textAlignment="center"
            android:background="@drawable/text_view_title_background_color"
            android:text="@string/activity_cadastro_title" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorFontTextViewTitle"
            android:text="@string/activity_cadastro_title_campo_nome" />

        <EditText
            android:id="@+id/ed_txt_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="@drawable/campos"
            android:textAlignment="textStart"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorFontTextViewTitle"
            android:text="@string/activity_cadastro_title_campo_expressao" />

        <EditText
            android:id="@+id/ed_txt_expressao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="@drawable/campos"
            android:textAlignment="textStart"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorFontTextViewTitle"
            android:text="@string/activity_cadastro_title_campo_data" />

        <EditText
            android:id="@+id/ed_txt_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="@drawable/campos"
            android:textAlignment="textStart"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorFontTextViewTitle"
            android:text="@string/activity_cadastro_title_campo_descricao" />

        <EditText
            android:id="@+id/ed_txt_descricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="@drawable/campos"
            android:textAlignment="textStart"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/bt_voltar"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/click_button"
                android:textColor="@color/colorFontActivityMainBemVindo"
                android:text = "@string/activity_cadastro_botao_voltar" />
            <Button
                android:id="@+id/bt_confirmar"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/click_button"
                android:textColor="@color/colorFontActivityMainBemVindo"
                android:text = "@string/activity_cadastro_botao_confirmar" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>